nav.html: Reword for clarity: 'Device cannot be open'. #4

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -34,7 +34,7 @@
       <div class="tooltip-inner"
            ng-switch="device.error">
         <span ng-switch-when="Opening device failed">
-          Device cannot be open. Make sure you don't have myTREZOR running in other tabs!
+          Device could not be opened. Make sure you don't have myTREZOR running in another tab or browser window!
         </span>
         <span ng-switch-default>{{device.error}}</span>
       </div>
