--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -460,25 +460,74 @@ body {
 
 /* PIN modal */
 
-.pinmodal .modal-body .form-group {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 10px;
+.pinmodal .modal-body {
+  padding-bottom: 0;
+}
+.pinmodal .modal-footer {
+  margin-top: 0;
+}
+.pinmodal .form-group {
+  margin: 0;
+}
+.pinmodal .btn:focus {
+  outline: 0;
 }
 
-.pinmodal .modal-body .col-sm-4 {
+.pinmodal-dial .form-group {
+  margin-left: -5px;
+  margin-right: -5px;
+  margin-bottom: 10px;
+}
+.pinmodal-dial .col-sm-4 {
   padding-left: 5px;
   padding-right: 5px;
 }
 
-.pinmodal .modal-body .btn:focus {
-  outline: 0;
+.pinmodal-pin {
+  position: relative;
+  margin: 0.5em 0;
+  padding-right: 50px;
+}
+.pinmodal-pin-value {
+  height: 1.2em;
+  padding-top: 0.05em;
+  font-size: 200%;
+  line-height: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.pinmodal-pin .btn-back {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
-.pinmodal .modal-body {
-  padding-bottom: 0;
+.btn-back {
+  position: relative;
+  height: 28px;
+  color: #333;
+  background: #e1e1e1;
+  padding: 0 0.5em;
+  line-height: 28px;
 }
-
-.pinmodal .modal-footer {
-  margin-top: 0;
+.btn-back:hover,
+.btn-back:focus,
+.btn-back:active {
+  color: #000;
+  background: #d9d9d9;
+}
+.btn-back .arrow {
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: -15px;
+  top: -1px;
+  border-top: 14px solid transparent;
+  border-bottom: 14px solid transparent;
+  border-right: 14px solid #e1e1e1;
+}
+.btn-back:hover .arrow,
+.btn-back:focus .arrow,
+.btn-back:active .arrow {
+  border-right-color: #d9d9d9;
 }
