Improve seed words modals in the setup process
- use ordinal forms in the seed messages with new `ordinal` filter
- simplified wording

--- a/app/views/modal/setup.html
+++ b/app/views/modal/setup.html
@@ -2,35 +2,39 @@
   <h4 class="modal-title">Recovery seed setup</h4>
 </div>
 <div class="modal-body"
-    ng-switch="stage">
+     ng-switch="stage">
 
-  <div ng-switch-when="writeFirst">
-    <div class="alert alert-block alert-info">
-      <p>We will now show you {{RECOVERY_WORDS}} words that will allow you to
-      recover your accounts if you lose your device.</p>
-      <p>Please write down all these words carefully.</p>
-    </div>
-    <h4>Please write down word no. {{recoveryCurrentWord}}/{{RECOVERY_WORDS}}
-    of your recovery seed from your device.</h4>
+  <div ng-switch-when="writeFirst"
+       class="alert alert-block alert-info">
+    <p>We will now show you {{recoveryWords}} words that will allow
+      you to recover your accounts in case you lose your
+      device. <strong>Please write down all these words
+      carefully.</strong></p>
+    <hr>
+    <h4>Please write down the {{recoveryCurrentWord | ordinal}} word of your
+      recovery seed.</h4>
   </div>
 
-  <div ng-switch-when="write">
-    <h4>Please write down word no. {{recoveryCurrentWord}}/{{RECOVERY_WORDS}}
-    of your recovery seed from your device.</h4>
+  <div ng-switch-when="write"
+       class="alert alert-block alert-info">
+    <h4>Please write down the {{recoveryCurrentWord | ordinal}} word of your
+      recovery seed.</h4>
   </div>
 
-  <div ng-switch-when="checkFirst">
-    <div class="alert alert-block alert-info">
-      <p>We will now show you the {{RECOVERY_WORDS}} words that you just
-      wrote down again.
-      <p>Please check carefully that you wrote them down correctly.</p>
-    </div>
-    <h4>Please check word no. {{recoveryCurrentWord}}/{{RECOVERY_WORDS}}
-    of your recovery seed on your device.</h4>
+  <div ng-switch-when="checkFirst"
+       class="alert alert-block alert-info">
+    <p>We will now show you the {{recoveryWords}} words
+      again. <strong>Please check carefully that you wrote them down
+      correctly.</strong></p>
+    <hr>
+    <h4>Please check the {{recoveryCurrentWord | ordinal}} word of your recovery
+      seed.</h4>
   </div>
 
-  <div ng-switch-when="check">
-    <h4>Please check word no. {{recoveryCurrentWord}}/{{RECOVERY_WORDS}}
-    of your recovery seed on your device.</h4>
+  <div ng-switch-when="check"
+       class="alert alert-block alert-info">
+    <h4>Please check the {{recoveryCurrentWord | ordinal}} word of your recovery
+      seed.</h4>
   </div>
+
 </div>
