--- a/app/views/modal/forget.html
+++ b/app/views/modal/forget.html
@@ -1,11 +1,14 @@
 <div class="modal-header">
   <button type="button" class="close" title="Cancel"
-    ng-click="$dismiss()">&times;</button>
+          ng-if="!disableCancel"
+          ng-click="$dismiss()">&times;</button>
   <h4 class="modal-title">Disconnect your Trezor now</h4>
 </div>
 <div class="modal-body">
   The Web Wallet will forget your Trezor right after you disconnect it.
 </div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-default pull-left" ng-click="$dismiss()">Cancel</button>
+<div class="modal-footer"
+     ng-if="!disableCancel">
+  <button type="button" class="btn btn-default pull-left"
+          ng-click="$dismiss()">Cancel</button>
 </div>
