--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,10 @@
-<div ng-controller="MainCtrl">
+<div class="row"
+     ng-controller="MainCtrl">
 
-  <div class="alert alert-info"
+  <div class="jumbotron text-center col-md-7"
        ng-if="!devices.length">
-    <h4>Get started</h4>
+    <h2>Get started!</h2>
     <p>Connect your TREZOR device to the computer.</p>
-    <p class="need-help"><!-- #TODO --></p>
   </div>
 
 </div>
