Fix the app error state

--- a/app/views/error.html
+++ b/app/views/error.html
@@ -5,6 +5,7 @@
       <ng-include src="'views/debug.button.html'"></ng-include>
     </div>
     <ng-include src="'views/debug.log.html'"></ng-include>
+  </div>
 </div>
 
 <div ng-if="!installed">
