--- a/app/views/account/receive.html
+++ b/app/views/account/receive.html
@@ -16,12 +16,12 @@
     <ng-include src="'views/account/nav.html'"></ng-include>
 
     <div class="tab-content">
-      <div ng-if="!account.transactions"
+      <div ng-if="account.transactions === null"
            class="text-center text-muted">
         <h4>Waiting for transactions history&hellip;</h4>
       </div>
       <div ng-controller="AccountReceiveCtrl"
-           ng-if="account.transactions"
+           ng-if="account.transactions !== null"
            class="row">
 
         <div class="col-md-8">
