--- a/app/views/account/receive.html
+++ b/app/views/account/receive.html
@@ -18,7 +18,7 @@
     <div class="tab-content">
       <div ng-if="account.transactions === null"
            class="text-center text-muted">
-        <h4>Waiting for transactions history&hellip;</h4>
+        <h4>Waiting for transaction history&hellip;</h4>
       </div>
       <div ng-controller="AccountReceiveCtrl"
            ng-if="account.transactions !== null"
